change in footer and add meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <title>Camro Utensils - Quality Cookware and Kitchen Appliances</title>
+    <title>Top Kitchenware Appliances Manufacturer in India - Camrosteel</title>
     <meta name="author" content="Monika">
     <meta name="email" content="camrocookerpvtltd@gmail.com">
     <meta name="profile" content="https://www.camrosteel.com/about-us">
     <meta name="title" content="Camro Utensils - Quality Cookware and Kitchen Appliances">
-    <meta name="keywords" content="Camro Utensils, cookware, kitchen appliances, pressure cooker, tawa, kitchenware, kitchen essentials">
-    <meta name="description" content="Camro Utensils offers a wide range of high-quality cookware and kitchen appliances including cookers, tawas, and more. Visit our e-commerce site for the best kitchen products.">
+    <meta name="keywords" content="CAMRO Products, kitchenware, cookware, stainless steel, innovative kitchen appliances, quality kitchenware">
+    <meta name="description" content="Discover top-tier Kitchenware Appliances from expert manufacturer! Enhance your cooking experience with our reliable and innovative products. Shop now!">
     <meta name="contact" content="+91-8595722922">
 
     <!-- Instagram -->
