--- a/public/index.html
+++ b/public/index.html
@@ -75,10 +75,33 @@
     <!-- Font Awesome Cdn Link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "camrosteel",
+        "url": "https://www.camrosteel.com/",
+        "logo": "https://camrosteel.com/static/media/logo.a105fabfe9b44e0c67de.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+91-8595722922",
+          "contactType": "customer service",
+          "areaServed": "IN",
+          "availableLanguage": "Hindi"
+        },
+        "sameAs": [
+          "https://www.facebook.com/CamroSteels?mibextid=ZbWKwL",
+          "https://www.instagram.com/camrosteel?igsh=NmtrZGY3Zms2b2N6",
+          "https://youtube.com/@utensil_camrosteel?si=Gym2MWKq5WQLtGj8",
+          ""
+        ]
+      }
+    </script>
 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
   </body>
 </html>
