--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <title>Top Kitchenware Appliances Manufacturer in India - Camrosteel</title>
     <meta name="author" content="Monika">
-    <meta name="email" content="camrocookerpvtltd@gmail.com">
+    <meta name="email" content="sale.camrosteel@gmail.com">
     <meta name="profile" content="https://www.camrosteel.com/about-us">
     <meta name="title" content="Camro Utensils - Quality Cookware and Kitchen Appliances">
     <meta name="keywords" content="CAMRO Products, kitchenware, cookware, stainless steel, innovative kitchen appliances, quality kitchenware">
